# gamma-scalping

./: .env.example  .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml  screener_draft.py  testing.ipynb  testing.py
clients/: user_agent_mixin.py
engine/: delta_engine.py
market/: dividends.py  state.py  us_treasury_yield_curve.py
portfolio/: position_manager.py
strategy/: hedging_strategy.py  options_strategy.py
utils/: parsing.py
