[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["engine", "market", "portfolio", "strategy"]

[project]
name = "gamma-scalper"
version = "1.0.0"
description = "An automated market-neutral options strategy using the Alpaca Trading API."
authors = [
  { name="Simon", email="your.email@example.com" },
]
requires-python = ">=3.10"
dependencies = [
    "alpaca-py",
    "python-dotenv",
    "QuantLib-Python",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
] 