[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["engine", "market", "portfolio", "strategy", "clients", "utils"]

[project]
name = "gamma-scalper"
version = "1.0.0"
description = "An automated market-neutral options strategy using the Alpaca Trading API."

requires-python = ">=3.10"
dependencies = [
    "alpaca-py",
    "python-dotenv",
    "QuantLib-Python",
    "scipy",
    "certifi",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
] 
